# riftsyncai

./: .env.example  .gitattributes  .gitignore  README.md  motim.txt  package-lock.json  package.json  riot.txt  vercel_meta_test.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
public/: releases.json
scripts/: bump-version.js
src/: App.vue  style.css
src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  ddragon.rs  game_flow.rs  groq.rs  lca.rs  lcu.rs  lib.rs  main.rs  minimap.rs  openrouter.rs  post_game.rs  riot_api.rs  voice.rs  window.rs
src-tauri/src/bridge/: helpers.rs  in_game.rs  mod.rs
src-tauri/src/db/: blitz_service.rs  build_sync_service.rs  match_service.rs  matchup_service.rs  mod.rs  models.rs  player_style_service.rs  rune_sync_service.rs  schema.rs  sync_service.rs  vercel_sync_service.rs
src-tauri/src/db/coach_service/: heuristics.rs  mod.rs  runes.rs  stats.rs  tactical.rs
src-tauri/src/live_coach/: dynamic_tip.rs  jungle_clear.rs  micro_tip.rs  mod.rs  skill_tip.rs  state.rs  telemetry.rs
src/components/: BuildWindow.vue  DataViewerWindow.vue  Flashcard.vue  MatchupExplorerView.vue  PlayerProfileView.vue  PostGameOverlay.vue  PreGameOverlay.vue  RuneOverlay.vue  SettingsWindow.vue  SyncProgress.vue  UpdaterWindow.vue  WardMapCard.vue  runesData.ts
src/composables/: useCoachSettings.ts  useSpellCoach.ts  useVoiceCoach.ts
